--- a/pages/catalog/catalog.scss
+++ b/pages/catalog/catalog.scss
@@ -59,6 +59,11 @@ section {
   letter-spacing: -0.2px;	
   line-height: 18px;
   text-transform: uppercase;
+  @media only screen and (max-width: 767px) {
+    font-size: 12px;
+    line-height: 15px;
+    font-family: map-get($font-families, secondary-medium);
+    }
 }
 .main-heading{
   color: #000000;	
@@ -87,6 +92,9 @@ section {
  .special-text-bold {
   font-family: map-get($font-families, primary-bold);
  }
+ .special-text {
+  background: linear-gradient(to bottom,rgba(255,255,255,0) 0,rgba(255,255,255,0) 48%,rgba(255,255,255,0) 50%,#FFD382 52%,#FFD382 100%);
+   }
 }
 
 .common-para-1 {
@@ -100,6 +108,9 @@ section {
     font-size: 16px;
     line-height: 24px;
  }
+   .special-text-bold {
+  font-family: map-get($font-families, primary-bold);
+   }
 }
 
 .common-para-2 {
@@ -112,6 +123,9 @@ section {
   @media only screen and (max-width: 767px) {
     font-size: 16px;
     line-height: 24px;
+ }
+  .special-text-bold {
+  font-family: map-get($font-families, primary-bold);
  }
 }
 
@@ -167,8 +181,9 @@ $border-radius: 5px;
     // First Section
     .banner {
         background: url(../../images/catalog/hero-bg.png) no-repeat;
+        background-size: cover;
         height: 1220px;
-        @extend %gutter;
+        padding-top: 100px;
         @extend %top-spacing;
         @media only screen and (max-width: 500px) {
                 height: 680px;
@@ -190,7 +205,7 @@ $border-radius: 5px;
             height: 151px;
             width: 151px;
             position: absolute;
-            top: 66%;
+            top: 79%;
             right: -1%;
             /*top: 73%;
             right: 15%;*/
@@ -220,7 +235,8 @@ $border-radius: 5px;
 
     // Second Section
     .what-we-did {
-        width: 90%;
+        /*width: 90%;*/
+        width: 75%;
         margin: 0 auto;
         background: #fff;
         margin-top: -6%;
@@ -229,7 +245,10 @@ $border-radius: 5px;
             }
         .tech-stack {
             /*@extend %gutter-inner;*/
-            padding: 2em 10em 0 10em;            
+            /*padding: 2em 10em 0 10em;*/
+            max-width: 935px;
+            margin: 0 auto;
+            padding: 2em 0;            
             display: flex;
             @media only screen and (max-width: 500px) {
                 padding: 30px;
@@ -278,7 +297,7 @@ $border-radius: 5px;
                     font-family: map-get($font-families, primary);
                     font-size: 14px;
                     letter-spacing: -0.2px;
-                    margin-top: 3px;
+                    margin-top: 12px;
                 }
             }
             .items-2 {
@@ -313,6 +332,13 @@ $border-radius: 5px;
             letter-spacing: -0.2px;
             line-height: 42px;
             margin-top: 9%;
+            @media only screen and (max-width: 767px) {
+                font-size: 20px;
+                line-height: 36px;
+            }
+            .special-text {
+                background: linear-gradient(to bottom,rgba(255,255,255,0) 0,rgba(255,255,255,0) 48%,rgba(255,255,255,0) 50%,#FFD382 52%,#FFD382 100%);
+            }
         }
     }
 
@@ -336,9 +362,26 @@ $border-radius: 5px;
     .research {
         background-color: #E8EFF2;
         height: 1024px;
+        margin-top: 100px;
         .content-left {
             width: 30rem;
-            margin-left: 15.75em;
+            margin-left: 13.75rem;
+            /*padding-left: 25%;
+            padding-right: 20%;*/
+            padding-top: 100px;
+            @media only screen and (max-width: 768px) {
+                width: auto;
+                margin-left: 0;
+            }
+        }
+        .content-right {
+            .product-cards {
+                background: url(../../images/catalog/features_col_01.svg) no-repeat;
+                background-size: contain;
+                height: 940px;
+                width: 240px;
+                margin-top: -16%;
+            }
         }
     }
 
@@ -349,12 +392,15 @@ $border-radius: 5px;
             @extend %gutter-inner;
         }
         .conversion-stats {
+                 max-width: 1083px;
+                 margin: 0 auto;
+                 margin-top: 100px;
             .product-portfolio .product-img {
-                width: 935px;
-                margin-left: 8%;
+                width: 950px;
             }
             .product-stat {
-                margin: 4%;
+                margin-top: 4%;
+                width: 103px;
                 .conversion-rate {
                     .conversion-num {
                         color: #01C4CF;
@@ -453,8 +499,6 @@ $border-radius: 5px;
         }
         .product-website {
             @extend %gutter-inner;
-            border: 1px solid;
-            height: 200px;
             color: #000000;
             font-family: map-get($font-families, secondary);
             font-size: 18px;
@@ -462,6 +506,10 @@ $border-radius: 5px;
             letter-spacing: -0.14px;
             line-height: 36px;
             margin-top: 119px;
+            .sketch-illustration {
+                background: url(../../images/catalog/product-website-illustrations.png) no-repeat;
+                height: 309px;
+            }
         }
     }
 
@@ -473,9 +521,15 @@ $border-radius: 5px;
             margin-top: 80px;        
         .outcome-stats-1 {
             margin-left: 147px;
+            @media only screen and (max-width: 767px) {
+                margin-left: auto;
+            }
         }
         .outcome-stats-2 {
             margin-left: 133px;
+            @media only screen and (max-width: 767px) {
+                margin-left: auto;
+            }
         }
       }
     }
