--- a/pages/catalog/catalog.scss
+++ b/pages/catalog/catalog.scss
@@ -363,6 +363,9 @@ $border-radius: 5px;
         background-color: #E8EFF2;
         height: 1024px;
         margin-top: 100px;
+        @media only screen and (max-width: 500px) {
+            height: 1487px;
+        }
         .content-left {
             width: 30rem;
             margin-left: 13.75rem;
@@ -372,16 +375,52 @@ $border-radius: 5px;
             @media only screen and (max-width: 768px) {
                 width: auto;
                 margin-left: 0;
+                padding-left: 15px;
+                padding-right: 15px;
             }
         }
         .content-right {
-            .product-cards {
+            max-width: 520px;
+            margin-left: 40px;
+            @media only screen and (max-width: 500px) {
+                        margin: 0 auto;
+                        margin-top: 50px;
+                    }
+            ul  {
+                display: flex;
+                list-style: none;
+                li {
+                    .first-feature {
+                    margin-top: -21%;
+                    @media only screen and (max-width: 500px) {
+                        width: 150px;
+                        margin-top: 0;
+                    }
+                }
+                 .second-feature {
+                     margin-left: 20px;
+                     margin-top: 127px;
+                     @media only screen and (max-width: 500px) {
+                        width: 150px;
+                        margin-top: 0;
+                        margin-left: 12px;
+                    }
+                  }
+                }                 
+            }
+            /*.product-cards {
                 background: url(../../images/catalog/features_col_01.svg) no-repeat;
                 background-size: contain;
                 height: 940px;
                 width: 240px;
                 margin-top: -16%;
             }
+            .product-cards-1 {
+                background: url(../../images/catalog/features_col_02.svg) no-repeat;
+                background-size: contain;
+                height: 940px;
+                width: 240px;
+            }*/
         }
     }
 
