--- a/styles/utilities/_helpers.scss
+++ b/styles/utilities/_helpers.scss
@@ -71,7 +71,8 @@ input.small {
   background-color: #FC7764; // var
   color: #fff; // var
   border-radius: 5px;
-  padding: 10px;
+  padding: 17px;
+  display: inline-block;
 
   &:hover {
     background-color: #FF6B57;
