--- a/pages/lucid-reality/lucid-reality.scss
+++ b/pages/lucid-reality/lucid-reality.scss
@@ -1,6 +1,8 @@
 @import '../../styles/base/variables';
 @import '../../styles/utilities/mixins';
 
+// Variables
+$border-radius: 5px;
 
 // Common Styles
 .label {
